# genetics-gym-final

./: .gitignore  DATAPROC_SUBMIT_GUIDE.md  check_duplicates.py  submit_to_dataproc.sh
data_preprocessing/VSMs/: 1_import_each_VSM_to_ht.py  checks.ipynb
data_preprocessing/VSMs/1_import_each_VSM_to_ht/: import_AM.py  import_cadd.py  import_cpt.py  import_esm1b.py  import_gpn-msa.py  import_misfit.py  import_mpc.py  import_pai3d.py  import_polyphen.py  import_popeve.py  import_proteinmpnn.py  import_rasp.py  import_revel.py
data_preprocessing/VSMs/2_join_each_VSM_to_linker/: join_AM.py  join_cadd.py  join_cpt.py  join_esm1b.py  join_gpn-msa.py  join_misfit.py  join_mpc.py  join_pai3d.py  join_polyphen.py  join_popeve.py  join_rasp.py  (+2 more)
data_preprocessing/linkers/: 1_extract_base_from_context.py  2_vsm_linkers_from_base.py
data_preprocessing_hail/linkers/: 2_vsm_linkers_from_base.py  3_vsm_to_gene_linkers.py  linker_to_tsv.py
eval/: .gitignore  GENE_EVAL_EXPLANATION.md  README.md  pyproject.toml
eval/biostat_cli/: __init__.py  cli.py  cli_parallel.py  config.py  types.py  utils.py
eval/tests/: test_stats.py
merge/: README.md  __init__.py  add_score.py  apply_filters.py  create_vsm_table.py  merge.py  naming.py  negate.py  paths.py  percentile.py  pipeline.py  pyproject.toml  requirements.txt  row_counts.py  smooth.py  table_io.py  test_smooth.py  types.py
resources/: constants.py  files.py  functions.py  paths.py  resources.py
ui/: __init__.py  __main__.py  app.py  config.json  engine.py  plotting.py  prepare.py  pyproject.toml  registry.py  session.py
(+40 files in other folders)
